@@ -62,10 +62,20 @@
 \alias{Ops,numeric,ddiMatrix-method}
 \alias{Ops,ldiMatrix,numeric-method}
 \alias{Ops,numeric,ldiMatrix-method}
+%
 \alias{Ops,ddiMatrix,ANY-method}
 \alias{Ops,ANY,ddiMatrix-method}
 \alias{Ops,ldiMatrix,ANY-method}
 \alias{Ops,ANY,ldiMatrix-method}
+\alias{Ops,ddiMatrix,Matrix-method}
+\alias{Ops,Matrix,ddiMatrix-method}
+\alias{Ops,ldiMatrix,Matrix-method}
+\alias{Ops,Matrix,ldiMatrix-method}
+\alias{Ops,ddiMatrix,dMatrix-method}
+\alias{Ops,dMatrix,ddiMatrix-method}
+\alias{Ops,ldiMatrix,dMatrix-method}
+\alias{Ops,dMatrix,ldiMatrix-method}
+%
 \alias{Ops,ddiMatrix,ddiMatrix-method}
 \alias{Ops,ddiMatrix,ldiMatrix-method}
 \alias{Ops,ldiMatrix,ddiMatrix-method}
